Use standard term 'node' for elements in pagination
